added fuc acr collumn to fuc list table and created ordenation support

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Index.cshtml
@@ -16,7 +16,8 @@
 
     <table>
         <thead>
-    <tr><th class="order">Fuc Name</th></tr>
+    <tr><th class="order">Fuc Name</th>
+    <th class="order">Fuc Acr</th></tr>
     </thead>  
    @Html.Partial("PIndex")
     </table>
