--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -9,20 +9,20 @@
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.5.2.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery-1.7.1.js" type="text/javascript"></script>
-<script src="../../Scripts/autosuggest.js" type="text/javascript"></script>
+<!--<script src="../../Scripts/autosuggest.js" type="text/javascript"></script>-->
     <script src="../../Scripts/jquery-ui-1.8.11.min.js" type="text/javascript"></script>
     <script src="../../Scripts/Pagination.js" type="text/javascript"></script>
     <script src="../../Scripts/orderby.js" type="text/javascript"></script>
     <script type="text/javascript" src="../../Scripts/AccordionScript.js"></script>
  
- <!--<script type"text/javascript">
+ <script type"text/javascript">
      $.ajaxSetup({ type: "post" });
      $(document).ready(function () {
          $("input#searchQuery").autocomplete({
              source: '@Url.Action("Find", "Search")', minChars: 1, delay: 500
          });
      });
- </script>-->
+ </script>
   
        
 </head>
