--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
@@ -1,159 +1,3 @@
-body
-{
-    
-   
-    /*font-size: .85em;*/
-    font-family: Calibri, Verdana, Sans-Serif;
-    color: #232323;
-    background-color: white;
-}
-
-header,
-footer,
-nav,
-section {
-    display: block;
-}
-
-.page 
-{
-    width: 1005;
-    height: 750;
-    /*margin: 20px;*/
-    margin: 10px auto 0px auto;
-    background-color: #98AFC7;
-}
-.header 
-{
-    width: 100%;
-    height: 100px;
-    position: relative;
-}
-
-.page_links
-{
-    /*width: 900px;*/
-    width: 100%;
-    display: inline;
-    position: relative;
-    text-align: left;
-    margin: 5px;
-}
-
-#page_content 
-{
-    position: absolute;
-    /*float:left;
-    text-align: left;*/
-    padding: 20px;
-    background-color: #ECE5B6;
-}
-
-.header #search
-{
-    float: right;
-    font-size: 1.0em;
-    display: block;
-    text-align: right;
-    margin: 5px;
-}
-
-.header #title
-{
-    font-size: 30px;
-    font-weight: bold;
-    position: relative;
-    text-align: center;
-    margin: 5px;
-}
-
-.header #login
-{
-    /*font-size: 0.8em;*/
-    display: block;
-    position: relative;
-    float: right;
-    text-align: right;
-    margin: 5px;
-}
-
-.header #login_failed
-{
-    font-size: 0.8em;
-    display: block;
-    position: relative;
-    float: right;
-    text-align: right;
-    margin: 5px;
-}
-
-#main 
-{
-    position: relative;
-    padding: 0px 0px 0px 0px;
-    background-color: rgb(221, 221, 221);
-}
-/* Styles for basic forms
------------------------------------------------------------*/
-
-fieldset 
-{
-    border:1px solid #ddd;
-    padding:0 1.4em 1.4em 1.4em;
-    margin:0 0 1.5em 0;
-}
-
-legend 
-{
-    font-size:1.2em;
-    font-weight: bold;
-}
-
-textarea 
-{
-    min-height: 75px;
-}
-
-.editor-label 
-{
-    margin: 1em 0 0 0;
-}
-
-.editor-field 
-{
-    margin:0.5em 0 0 0;
-}
-
-
-/* Styles for validation helpers
------------------------------------------------------------*/
-.field-validation-error
-{
-    color: #ff0000;
-}
-
-.field-validation-valid
-{
-    display: none;
-}
-
-.input-validation-error
-{
-    border: 1px solid #ff0000;
-    background-color: #ffeeee;
-}
-
-.validation-summary-errors
-{
-    font-weight: bold;
-    color: #ff0000;
-}
-
-.validation-summary-valid
-{
-    display: none;
-}
-
 
 /* css necessário para exemplo de autosuggest
 #suggest{
@@ -198,4 +42,196 @@ textarea
     padding-left: 5px;
     color: white;
     background-color: #bdbfc6;
+}
+
+
+
+
+
+
+
+/*------------------------------------------------------------------------
+ Layout Stylesheet
+ ------------------------------------------------------------------------*/
+
+
+/* Global Properties
+ ------------------------------------------------------------------------*/
+html, body { height:100%;}
+body {
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:12px;
+	line-height:20px;
+	font-weight:normal;
+	text-align:left;
+	color:#999;
+	background:#333
+}
+
+
+/* Header
+ ------------------------------------------------------------------------*/
+
+#header1 {
+	z-index:999;
+	left:0;
+	top:0;
+	height:90px;
+	width:100%;
+	min-width: 1000px;
+	position: absolute;
+
+}
+.fixed { position:absolute; }
+.absolute { position:absolute; }
+#content-header {
+	position:relative;
+	margin:0 auto;
+	width:1000px;
+	height:80px;
+}
+#logo {
+	position:absolute;
+	left:0;
+	top:10px;
+}
+
+/* Menu
+ ------------------------------------------------------------------------*/
+#main-menu {
+	float:right;
+	margin-top:30px;
+	padding:0 18px 32px 18px;
+}
+
+#main_menu
+
+{
+
+	padding: 0 0.5em;
+
+	float: left;
+
+	margin: 0;
+
+	width: 99%;
+
+}
+
+.dropmenu, .dropmenu ul
+
+{
+
+	text-transform:uppercase;
+
+	font-size: 12px;
+
+	list-style: none;
+
+	line-height: 1em;
+
+	padding: 0;
+
+	margin: 0;
+
+	font-weight: bold;
+
+}
+
+.dropmenu
+
+{
+
+	padding: 0 0.5em;
+
+}
+
+.dropmenu a
+
+{
+
+	display: block;
+
+	color: #000;
+
+	text-decoration: none;
+	color: #999;
+    cursor:pointer;
+	
+}
+.dropmenu a:hover, .register a:hover {
+
+    background:#3c556c;
+    
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+
+	color: #fff;
+
+	cursor: pointer;
+
+	text-decoration: none;
+
+}
+.dropmenu a span
+
+{
+
+	display: block;
+
+	padding: 0 0 0 5px;
+
+	font-size: 0.9em;
+
+}
+
+.dropmenu li a
+
+{
+
+	margin-right: 8px;
+
+}
+
+
+
+.dropmenu li
+
+{
+
+    border-bottom:1px solid #292929;
+	float: left;
+
+	padding: 0;
+
+	margin: 0;
+
+	position: relative;
+
+}
+
+.register {
+     background:#222;
+      margin-top: 70px;
+       height: 34px; 
+       padding-top: 23px; 
+       border-bottom: solid 1px #191919;
+        outline: 1px solid #333; 
+        text-align:center; 
+        text-transform:uppercase; 
+        font-size:10px;
+}
+
+.register_users_stats{ color: #990;}
+
+#search 
+{
+    
+    background: #111;
+    margin-top: 25px;
+    height: 29px;
+    width: 600px;
+    border: 1px solid #252525;
+    outline: 5px solid #181818;
+    border-radius: 3px; -moz-border-radius: 3px;
 }
