--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/Body.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/themes/base/jquery-ui-1.8.custom.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
@@ -27,28 +28,63 @@
        
 </head>
 
+
+
 <body>
-    <div class="page">
+<header id="header1">
 
-     <div class="header">
-   
-          <div id="title">ISEL Course Aplication</div>
+<!-- header-content -->
 
-              <div class="page_links">
-                @Html.ActionLink("Home", "Index", "Home")
+<div id="content-header">
+
+  <!-- logo -->
+
+  <div id="logo"> 
+    <div id="title">ISEL Course Aplication</div>
+       <!--  <a href="http://pdclinks.net/forum/index.php" title="pdclinks.net">
+         <img src="http://pdclinks.net/forum/Themes/default/s7_img/logo.png" title="pdclinks.net" alt="pdclinks.net">
+         </a>-->
+  </div>
+
+  <!-- main-menu -->
+
+  <nav id="main-menu">
+		<div id="main_menu">
+			<ul class="dropmenu">
+
+            <li>
+              @Html.ActionLink("Home", "Index", "Home")
+              </li>
+              <li>
                 @Html.ActionLink("Fuc List", "Index", "Fuc")
-            
+             </li>
                 @if(Request.IsAuthenticated)
                 {
+                    <li>
                     @Html.ActionLink("Create New Fuc", "Create", "NewFucProposal")
+                     </li>
+                    <li>
                     @Html.ActionLink("Fuc Proposal List", "Index", "Proposal")
+                     </li>
+                    <li>
                     @Html.ActionLink("New Fuc Proposal List", "Index", "NewFucProposal")
+                     </li>
                 }
-            
-                <span style="padding-left: 774px">
-                    @if (Request.IsAuthenticated)
+			</ul>
+		</div> 
+
+  </nav>
+  <!-- /main-menu -->
+  
+</div>
+<!-- /float-header -->
+
+</header>
+
+ <div class="register">
+                   @if (Request.IsAuthenticated)
                     {
-                        <text>Welcome <strong> @Html.ActionLink(@User.Identity.Name, "Detail", "Profile") </strong>
+                        <text>Welcome <strong class="register_users_stats"> @Html.ActionLink(@User.Identity.Name, "Detail", "Profile") </strong>
     
                             [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
                     
@@ -63,25 +99,29 @@
                         @Html.ActionLink("Register", "Index", "Register")
                         @:[ @Html.ActionLink("Log In", "LogOn", "Account") ]
                     }
-                    <!-- alterar padding-left no else antes.-->
-                </span>
-                  <span style="padding-left: 750px; text-align: right"> <!-- <span style="padding-left: 750px; text-align: right"> -->
 
-                    @using (Html.BeginForm("Index", "Search", FormMethod.Post))
+                  
+
+</div>
+<div align="center">
+  <div id="search">
+                     @using (Html.BeginForm("Index", "Search", FormMethod.Post))
                         {
-                            <input type="text" id="searchQuery" name="query"/>
-                            //@Html.TextBox("searchQuery");
+                        
+                         <input type="text" id="searchQuery" name="query"/>
+                        //@Html.TextBox("searchQuery");
                             <input type="submit" value="Go"/>
+                            <div id="autosuggest"><ul></ul></div>
                         }
-                </span>
-                
-              </div>
+                    </div>
+                    </div>
+        <div class="page_content"> 
+        
+                    <div class="page_content_body">
+                        @RenderBody()
+                    </div>
+           
         </div>
-
-        <div id="page_content">
-            @RenderBody()
-        </div>
-    </div>
 </body>
 
 </html>
