--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = "Fuc List";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }      
 
 <h1>Fuc List</h1>
@@ -21,4 +22,4 @@
     </thead>  
    @Html.Partial("PIndex")
     </table>
-    <div id="showDetail"/> 
+    <div id="showDetail"></div>
