--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -117,11 +117,18 @@
                     </div>
         <div class="page_content"> 
         
-                    <div class="page_content_body">
-                        @RenderBody()
-                    </div>
-           
-        </div>
-</body>
+           <div class="page_content_body">
+               @RenderBody()
+           </div>
 
+           <div class="footer">
+               Copyright © ISEL<br>
+               Programação na Internet s11/12i LI51N-G02
+           </div>
+
+
+        </div>
+
+          
+</body>
 </html>
