--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
@@ -14,17 +14,30 @@
  @Html.Partial("Pagination")
  </div>
 
-<div>
-   <table border="1">
+  <div>
+ <table class="elems_table">
+ <tbody>
+ <tr><td>
+ <ul>
+     <li class="elems_table_first">
+        <table>
    <tr>
             <th class="order">Proposal</th>
             <th class="order">Acronym</th>
             <th class="order">Creator</th>
             <th>Aproval</th>
         </tr>
-  @Html.Partial("PIndex")
-    </table> 
-</div>
-  <div id="showDetail"></div>
+            <tbody id="elems">
+             @Html.Partial("PIndex")
+            </tbody>  
+        </table>
+      </li>
 
-
+ 
+    <li class="elems_table_second"> <div id="showDetail"></div></li>
+ </ul>
+    </td>
+    </tr>
+     </tbody> 
+    </table>
+ </div>
