--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Body.css
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Body.css
@@ -37,19 +37,75 @@
     
 }
 
-.pages_table{
+#showDetail {
+
+
+}
+
+.elems_table table 
+{
+	font-family: verdana,arial,sans-serif;
+	font-size:11px;
+	color:#333333;
+	border-width: 1px;
+	border-color: #999999;
+	border-collapse: collapse;
+    width: 100%;
+}
+.elems_table table th {
+	background:#b5cfd2 url('cell-blue.jpg');
+	border-width: 1px;
+	padding: 8px;
+	border-style: solid;
+	border-color: #999999;
+}
+.elems_table table td {
+	background:#dcddc0 url('cell-grey.jpg');
+	border-width: 1px;
+	padding: 8px;
+	border-style: solid;
+	border-color: #999999;
+}
+
+
+.pages_table, .elems_table{
     width: 100%;
     border:0;
 }
 
-.pages_table ul
+.pages_table ul, .elems_table ul
 {
     padding:0;
     margin:0; 
     width:100%;
     }
+.elems_table_first  {
 
+       list-style-type:none;
+     float:left; 
+     margin:4px 4px 4px 0px;
+     line-height:25px; 
+     text-align:center;
+     font-size:80%;
+     border-radius: 5px;
+     min-width: 40px;
+     width: 30%;
+}
 
+.elems_table_second {
+
+    list-style-type:none;
+     float:left; 
+     margin:4px 4px 4px 0px;
+     line-height:25px; 
+     text-align:center;
+     font-size:80%;
+     color:#fff; 
+     background-color: #5C6262;
+     border-radius: 5px;
+     min-width: 40px;
+     width: 69%;
+}
 .pages_table ul li {
 
      list-style-type:none;
