--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/IndexAll.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/IndexAll.cshtml
@@ -10,14 +10,28 @@
  <input type="hidden" id="totalelems" value="@ViewData["totalitems"]"/>
 <div id="pager">
  </div>
+  <div>
+ <table class="elems_table">
+ <tbody>
+ <tr><td>
+ <ul>
+     <li class="elems_table_first">
+        <table>
+            <thead>
+                 <tr><th class="order">Fuc Name</th>
+                <th class="order">Fuc Acr</th></tr>
+            </thead>  
+            <tbody id="elems">
+             @Html.Partial("PIndex")
+            </tbody>  
+        </table>
+      </li>
 
-
-    <table >
-        <thead>
-    <tr><th class="order">Fuc Name</th></tr>
-    </thead>
-
-   @Html.Partial("PIndex")
-
+ 
+    <li class="elems_table_second"> <div id="showDetail"></div></li>
+ </ul>
+    </td>
+    </tr>
+     </tbody> 
     </table>
-    <div id="showDetail"></div>
+ </div>
