--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/IndexAll.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/IndexAll.cshtml
@@ -12,16 +12,32 @@
 <div id="pager">
  </div>
 
-<div>
-   <table border="1">
+  <div>
+ <table class="elems_table">
+ <tbody>
+ <tr><td>
+ <ul>
+     <li class="elems_table_first">
+   <table>
    <tr>
             <th class="order">Proposal</th>
             <th class="order">Acronym</th>
             <th class="order">Creator</th>
             <th>Aproval</th>
         </tr>
+        <tbody id="elems">
   @Html.Partial("PIndex")
+  </tbody>
     </table> 
-</div>
- <div id="showDetail"></div>
+    </li>
+
+ 
+    <li class="elems_table_second"> <div id="showDetail"></div></li>
+ </ul>
+    </td>
+    </tr>
+     </tbody> 
+    </table>
+ </div>
+
 
