--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/IndexAll.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/IndexAll.cshtml
@@ -13,8 +13,14 @@
  </div>
 
 
-<div>
-   <table border="1">
+
+ <div>
+ <table class="elems_table">
+ <tbody>
+ <tr><td>
+ <ul>
+     <li class="elems_table_first">
+   <table >
    
         <tr>
             <th class="order">Proposal</th>
@@ -24,6 +30,14 @@
         </tr>
         @Html.Partial("PIndex")
     </table>
-</div>
- <div id="showDetail"></div>
+      </li>
+
+ 
+    <li class="elems_table_second"> <div id="showDetail"></div></li>
+ </ul>
+    </td>
+    </tr>
+     </tbody> 
+    </table>
+ </div>
 
