--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
@@ -24,7 +24,7 @@
     font-size: 8pt;
     background-color: rgb(245, 244, 244);
     border: 3px solid rgb(192, 189, 189);
-    position: absolute;
+    position: relative;
     cursor: default;
     overflow: auto;
     overflow-x: hidden;
