--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -5,25 +5,25 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Body.css")" rel="stylesheet" type="text/css" />
-    <link href="@Url.Content("~/Content/themes/base/jquery-ui-1.8.custom.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/themes/base/jquery-ui-1.8.16.custom.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.5.2.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery-1.7.1.js" type="text/javascript"></script>
-<!--<script src="../../Scripts/autosuggest.js" type="text/javascript"></script>-->
     <script src="../../Scripts/jquery-ui-1.8.11.min.js" type="text/javascript"></script>
     <script src="../../Scripts/Pagination.js" type="text/javascript"></script>
     <script src="../../Scripts/orderby.js" type="text/javascript"></script>
     <script type="text/javascript" src="../../Scripts/AccordionScript.js"></script>
+    <!--<script src="../../Scripts/autosuggest.js" type="text/javascript"></script>-->
  
- <script type="text/javascript">
-     $.ajaxSetup({ type: "post" });
-     $(document).ready(function () {
-         $("input#searchQuery").autocomplete({
-             source: '@Url.Action("Find", "Search")', minChars: 1, delay: 500
+     <script type="text/javascript">
+         $.ajaxSetup({ type: "post" });
+         $(document).ready(function () {
+             $("input#searchQuery").autocomplete({
+                 source: '@Url.Action("Find", "Search")', minChars: 1, delay: 500
+             });
          });
-     });
- </script>
+     </script>
   
        
 </head>
@@ -40,10 +40,10 @@
   <!-- logo -->
 
   <div id="logo"> 
-    <div id="title">ISEL Course Aplication</div>
-       <!--  <a href="http://pdclinks.net/forum/index.php" title="pdclinks.net">
-         <img src="http://pdclinks.net/forum/Themes/default/s7_img/logo.png" title="pdclinks.net" alt="pdclinks.net">
-         </a>-->
+      <div id="title"/>
+       <a href="@Url.Action("Index","Home")" title="ISEL Course Aplication">
+           <img src="@Url.Content("~/Content/themes/base/images/ISEL_03_mod_355x60.png")" title="ISEL Course Aplication" alt="ISEL CApp"/>
+         </a>
   </div>
 
   <!-- main-menu -->
