--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
   <!-- logo -->
 
   <div id="logo"> 
-      <div id="title"/>
+    <div id="title"></div>
        <a href="@Url.Action("Index","Home")" title="ISEL Course Aplication">
            <img src="@Url.Content("~/Content/themes/base/images/ISEL_03_mod_355x60.png")" title="ISEL Course Aplication" alt="ISEL CApp"/>
          </a>
@@ -110,7 +110,6 @@
                         
                             <input value="Search" type="text" id="searchQuery" name="query" onclick="value=''"/>
                             <input type="submit" value="Go"/>
-                            <div id="autosuggest"><ul></ul></div>
                         }
                     </div>
                     </div>
