--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/Pagination.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/Pagination.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Pagination";
 }
+    <script src="../../Scripts/Pagination.js" type="text/javascript"></script>
+    <script src="../../Scripts/Init.js" type="text/javascript"></script>
+    <script src="../../Scripts/orderby.js" type="text/javascript"></script>
 
    <div id="pages">
    <table class="pages_table">
