--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Edit.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Proposal "+ @Model.Idx + " Edit";
 }
 
-<h1>Proposal + @Model.Idx +  Edit + @Model.User</h1>
+<h1>Proposal  @Model.Idx   Edit  @Model.User</h1>
 
     @using (Html.BeginForm("Edit", "NewFucProposal",new {@id=Model.Idx}, FormMethod.Post))
     {
