--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
@@ -14,7 +14,7 @@
  @Html.Partial("Pagination")
  </div>
 
-  <div>
+   <div style="margin-top: 40px">
  <table class="elems_table">
  <tbody>
  <tr><td>
