--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/IndexAll.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/IndexAll.cshtml
@@ -11,10 +11,7 @@
 <input type="hidden" id="totalelems" value="@ViewData["totalitems"]"/>
 <div id="pager">
  </div>
-
-
-
- <div>
+  <div style="margin-top: 40px">
  <table class="elems_table">
  <tbody>
  <tr><td>
