--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/Detail.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/Detail.cshtml
@@ -13,48 +13,81 @@
 {
          <input type="submit" value="edit"/>
 }
+<div class="elems_table">
+<table>
 
-
-<p>
-@Html.Label("Name: ")
+<tr><th><b>
+@Html.LabelFor(n => Model.Name):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Name)
-</p>
-<p>
-@Html.Label("Acronym: ")
+</td></tr>
+
+<tr><th><b>
+@Html.LabelFor(n => Model.Acr):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Acr)
-</p>
-<p>
-@Html.Label("Required: ")
+</td></tr>
+
+<tr><th><b>
+@Html.LabelFor(n => Model.IsRequired):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.IsRequired)
-</p>
-<p>
-@Html.Label("Semester: ")
+</td></tr>
+
+<tr><th><b>
+@Html.LabelFor(n => Model.Semesters):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Semesters)
-</p>
-<p>
-@Html.Label("Prerequisites: ")
+</td></tr>
+
+<tr><th><b>
+@Html.LabelFor(n => Model.Prerequisites):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Prerequisites)
-</p>
-<p>
-@Html.Label("ECTS: ")
+</td></tr>
+
+<tr><th><b>
+@Html.LabelFor(n => Model.Ects):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Ects)
-</p>
-<p>
-@Html.Label("Objectives: ")
+</td></tr>
+
+<tr><th><b>
+@Html.LabelFor(n => Model.Objectives):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Objectives)
-</p>
-<p>
-@Html.Label("Results: ")
+</td></tr>
+
+<tr><th><b>
+@Html.LabelFor(n => Model.Results):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Results)
-</p>
-<p>
-@Html.Label("Evaluation: ")
+</td></tr>
+
+<tr><th><b>
+@Html.LabelFor(n => Model.Evaluation):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Evaluation)
-</p>
-<p>
-@Html.Label("Program: ")
+</td></tr>
+
+<tr><th><b>
+@Html.LabelFor(n => Model.Program):
+</b></th>
+<td>
 @Html.DisplayTextFor(n => Model.Program)
-</p>
+</td></tr>
+
+</table>
+</div>
 
 @using (Html.BeginForm("Accept", "Proposal", new { @id = Model.Idx, @oracr = Model.OriginalAcr }, FormMethod.Post))
 {
