--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 
   <nav id="main-menu">
 		<div id="main_menu">
-			<ul class="dropmenu">
+			<ul class="menu_items">
 
             <li>
               @Html.ActionLink("Home", "Index", "Home")
