--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Content/Site.css
@@ -151,7 +151,7 @@ a {
 }
 .menu_items a:hover, .register a:hover,a:hover {
 
-    background:#3c556c;
+    background:#c8c8c3;
     
     border-radius: 4px;
     -moz-border-radius: 4px;
