--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/PIndex.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/PIndex.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "title";
 }
 
-        @foreach (var f in Model){
-            <tr>
-                <td> <a href=@Url.Action("Detail", "Fuc",new { @id = f.Acr }) class="detailer">@f.Name</a></td>
-                <td> <a href=@Url.Action("Detail", "Fuc",new { @id = f.Acr }) class="detailer">@f.Acr</a></td>
-            </tr>
-        }
-        
-        
+@foreach (var f in Model){
+    <tr>
+        <td> <a class="detailer" href=@Url.Action("Detail", "Fuc",new { @id = f.Acr }) >@f.Name</a></td>
+        <td> <a class="detailer" href=@Url.Action("Detail", "Fuc",new { @id = f.Acr }) >@f.Acr</a></td>
+    </tr>
+}
