Added 5 new Rows to the table with no info yet, when the user scroll to the bottom of the page

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/IndexAll.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/IndexAll.cshtml
@@ -28,7 +28,7 @@
     <td>
      <ul>
       <li class="elems_table_first">
-       <table>
+       <table id="unlimitedScrollTable">
         <thead>
          <tr>
           <th class="order">Fuc Name</th>
@@ -40,7 +40,7 @@
         </tbody>  
        </table>
      </li> 
-     <li class="elems_table_second"> <button onclick="scroll()">Load more</button> <div id="showDetail"></div></li>
+     <li class="elems_table_second"><div id="showDetail"></div></li>
     </ul>
    </td>
   </tr>
