--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Account/LogOn.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Account/LogOn.cshtml
@@ -28,7 +28,7 @@
         @Html.PasswordFor(m => m.Password)
         @Html.ValidationMessageFor(m => m.Password)<br />
      
-         <input type="submit" value="submit" onclick="formvalidation('myform');return false;"/>
+         <input type="submit" value="submit" />
 
           </fieldset>
     }
