--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Edit.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Edit.cshtml
@@ -9,6 +9,7 @@
 
     @using (Html.BeginForm("Edit", "NewFucProposal",new {@id=Model.Idx}, FormMethod.Post))
     {
+        @Html.ValidationSummary()
         <p>
         @Html.Label("Name")
         @Html.EditorFor(n => Model.Name)
