--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Register/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Register/Index.cshtml
@@ -10,6 +10,7 @@
 @using (Html.BeginForm("Index", "Register", FormMethod.Post))
     {
     
+    @Html.ValidationSummary()
      <fieldset>
             <legend>Account Information</legend>
 
